# vnpy_xtp

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  meson.build  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
script/: run.py
vnpy_xtp/: __init__.py
vnpy_xtp/api/: __init__.py  vnxtpmd.exp  vnxtpmd.ipdb  vnxtpmd.pyd  vnxtptd.exp  vnxtptd.pyd  xtp_constant.py
vnpy_xtp/api/generator/: generate_api_functions.py  generate_data_type.py  generate_struct.py  generate_struct_oms.py  xtp_constant.py  xtp_enum.py  xtp_md_header_define.h  xtp_md_header_function.h  xtp_md_header_on.h  xtp_md_header_process.h  xtp_md_source_callback.cpp  xtp_md_source_function.cpp  xtp_md_source_module.cpp  xtp_md_source_on.cpp  xtp_md_source_process.cpp  xtp_md_source_switch.cpp  xtp_md_source_task.cpp  xtp_oms_struct.py  xtp_quote_struct.py  xtp_struct_oms.py  xtp_struct_quote.py  xtp_td_header_define.h  xtp_td_header_function.h  xtp_td_header_on.h  xtp_td_header_process.h  xtp_td_source_callback.cpp  xtp_td_source_function.cpp  xtp_td_source_module.cpp  xtp_td_source_on.cpp  xtp_td_source_process.cpp  xtp_td_source_switch.cpp  xtp_td_source_task.cpp  xtp_typedef.py
vnpy_xtp/api/generator/old/: generate_struct_common.py  generate_struct_quote.py
vnpy_xtp/api/include/xtp/: xoms_api_fund_struct.h  xoms_api_struct.h  xquote_api_struct.h  xtp_api_data_type.h  xtp_quote_api.h  xtp_trader_api.h
vnpy_xtp/api/libs/: xtpquoteapi.lib  xtptraderapi.lib
vnpy_xtp/api/vnxtp/: vnxtp.h
vnpy_xtp/api/vnxtp/vnxtpmd/: vnxtpmd.cpp  vnxtpmd.h  vnxtpmd.vcxproj
vnpy_xtp/api/vnxtp/vnxtptd/: vnxtptd.cpp  vnxtptd.h  vnxtptd.vcxproj
vnpy_xtp/gateway/: __init__.py  xtp_gateway.py
